clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict_typedef/own_borrow_conflict_typedef.cbs
// RUN: %clang_cc1 -verify %s

typedef int *owned _Borrow InvalidPtr; // expected-error {{cannot combine 'owned' and '_Borrow' qualifiers on the same type}}
typedef Invalid = int *owned _Borrow; // expected-error {{cannot combine 'owned' and '_Borrow' qualifiers on the same type}}


void demo() {
    InvalidPtr p = nullptr;
}
void demo1() {
    Invalid p = nullptr;
}